--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,22 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campground</title>
+    <title>Edit Campground</title>
 </head>
 
 <body>
-    <form action="/campgrounds" method="POST">
+    <h1>Edit Campground</h1>
+    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
         <div>
             <label for="title">Title</label>
-            <input type="text" id="title" name="campground[title]">
+            <input type="text" id="title" name="campground[title]" value="<%= campground.title %>">
         </div>
         <div>
             <label for="location">Location</label>
-            <input type="text" id="Location" name="campground[location]">
+            <input type="text" id="Location" name="campground[location]" value="<%= campground.location %>">
         </div>
-        <button>Add Campground</button>
+        <button>Update Campground</button>
     </form>
-    <a href="/campgrounds">All Campgrounds</a>
+    <a href="/campgrounds/<%= campground._id %>">Back to Campgrounds</a>
 </body>
 
 </html>
