--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,6 +14,14 @@
     <h2>
         <%= campground.location %>
     </h2>
+    <div>
+        <a href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+    </div>
+    <div>
+        <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+            <button>Delete</button>
+        </form>
+    </div>
     <footer>
         <a href="/campgrounds">All Campgrounds</a>
     </footer>
