--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,8 @@
     <div class="row">
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">
-            <form class="validated-form" action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" enctype="multipart/form-data" novalidate>
+            <form class="validated-form" action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST"
+                enctype="multipart/form-data" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]"
@@ -18,18 +19,23 @@
                     <div class="input-group">
                         <span class="input-group-text" id="price-label">$</span>
                         <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
-                            aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>" required>
+                            aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>"
+                            required>
                     </div>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label" for="image">Add Images</label>
-                    <input type="file" name="image" id="image" multiple>
-                </div>
+
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="campground[description]"
-                        value="" required><%= campground.description %></textarea>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]" value=""
+                        required><%= campground.description %></textarea>
                 </div>
+
+                <div class="mt-3 mb-3 custom-file">
+                    <label for="image" class="form-label">Update Images</label>
+                    <input class="form-control" type="file" id="image" name="image" multiple>
+                    <label for="image" class="custom-file-label text-muted"></label>
+                </div>
+
                 <div class="mb-3">
                     <button class="btn btn-info">Update Campground</button>
                 </div>
