--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -19,16 +19,19 @@
                             aria-describedby="price-label" name="campground[price]" required>
                     </div>
                 </div>
-                <!-- <div class="mb-3">
-                    <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" required>
-                </div> -->
-                <input type="file" name="image" id="" multiple>
+
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
                     <textarea class="form-control" type="text" id="description" name="campground[description]"
                         required></textarea>
                 </div>
+
+                <div class="mt-3 mb-3 custom-file">
+                    <label for="image" class="form-label">Images</label>
+                    <input class="form-control" type="file" id="image" name="image" multiple>
+                    <label for="image" class="custom-file-label text-muted"></label>
+                </div>
+
                 <div class="mb-3">
                     <button class="btn btn-success">Add Campground</button>
                 </div>
