--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -35,6 +35,15 @@
                     <input class="form-control" type="file" id="image" name="image" multiple>
                     <label for="image" class="custom-file-label text-muted"></label>
                 </div>
+                <div class="mb-3">
+                    <% campground.images.forEach(function (img, i) { %>
+                        <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                        <div class="form-check-inline">
+                            <input type="checkbox" name="deleteImages[]" id="image-<%=i %>" value="<%=img.filename %>">
+                            <label for="image-<%=i %>">Delete?</label>
+                        </div>
+                        <% }) %>
+                </div>
 
                 <div class="mb-3">
                     <button class="btn btn-info">Update Campground</button>
