--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,7 +8,11 @@
         <div class="card">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" src="<%= campground.images[0].url %>" alt="">
+                    <% if(campground.images.length) { %>
+                        <img class="img-fluid" src="<%= campground.images[0].url %>" alt="">
+                        <% } else { %>
+                            <img class="img-fluid" src="https://res.cloudinary.com/dskorlytk/image/upload/v1733530905/YelpCamp/epia07q5am4cgwoveicv.jpg" alt="">
+                            <% } %>
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -23,7 +27,8 @@
                                 <%= campground.location %>
                             </small>
                         </p>
-                        <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%= campground.title %></a>
+                        <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%= campground.title %>
+                        </a>
                     </div>
                 </div>
             </div>
