--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,6 @@
 
     <div class="row">
         <div class="col-6">
-            <div id='map' style='width: 400px; height: 300px;'></div>
             <div id="campgroundCarousel" class="carousel slide">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=> { %>
@@ -57,6 +56,7 @@
             </div>
         </div>
         <div class="col-6">
+            <div id="map" style="height: 400px"></div>
             <% if(currentUser) { %>
                 <h3>Leave a review</h3>
                 <form class="mb-3 validated-form" action="/campgrounds/<%= campground._id %>/reviews" method="POST"
@@ -114,8 +114,8 @@
     </div>
 
     <script>
-        const mapToken = '<%-process.env.MAPBOX_TOKEN %>'
-        const campground = '<%-JSON.stringify(campground)%>'
+        const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
+        const campground = <%- JSON.stringify(campground) %>
     </script>
 
     <script src="/javascripts/showPageMap.js"></script>
