--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,9 @@
 <% layout('layouts/boilerplate') %>
-    <div id="map" style="width: 100%; height: 500px;"></div>
-    <h1>All Campgrounds</h1>
-    <div>
-        <a href="/campgrounds/new">Add Campground</a>
-    </div>
+    <div class="clusterMap" id="map"></div>
+    <h1 class="mt-3 mb-3" >All Campgrounds</h1>
 
     <% for (let campground of campgrounds) {%>
-        <div class="card">
+        <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
                     <% if(campground.images.length) { %>
