--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -56,12 +56,12 @@
             </div>
         </div>
         <div class="col-6">
-            <div id="map" style="height: 400px"></div>
+            <div class="map" id="map"></div>
             <% if(currentUser) { %>
-                <h3>Leave a review</h3>
+                <h3 class="mt-3 mb-3">Leave a review</h3>
                 <form class="mb-3 validated-form" action="/campgrounds/<%= campground._id %>/reviews" method="POST"
                     novalidate>
-                    <div class="mb-3">
+                    <div class="">
                         <fieldset class="starability-basic">
                             <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1"
                                 checked aria-label="No rating." />
